<resources>
    <string name="app_name">Loved Things App</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="nohp">No.Handphone</string>
    <string name="pass">Password</string>
    <string name="repass">Re-password</string>
    <string name="user_ana">brianafirst</string>
    <string name="email_ana">briana@gmail.com</string>
    <string name="nohp_ana">08xx xxxx xxxx</string>
    <string name="bintang">******</string>
    <string name="alamat">Alamat</string>

    <string name="tambahkan_deskripsi_produk">Tambahkan Deskripsi Produk</string>
    <string name="simpan">Simpan</string>
    <string name="jual_produk">Jual Produk</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>